--- a/src/styles.css
+++ b/src/styles.css
@@ -4,17 +4,25 @@
 
 html {
   box-sizing: border-box;
-  font-size: 55%;
+  font-size: 16px;
 }
 
 body {
   color: #606c76;
   color: #3e4348;
-  font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-  font-size: 1.6em;
+  font-size: 1rem;
   font-weight: 300;
   letter-spacing: 0.01em;
-  line-height: 1.6;
+  line-height: 1.5rem;
+  font-family: -apple-system, 
+    BlinkMacSystemFont, 
+    "Segoe UI", 
+    Roboto, 
+    Oxygen-Sans, 
+    Ubuntu, 
+    Cantarell, 
+    "Helvetica Neue", 
+    sans-serif;
 }
 
 *,
@@ -23,45 +31,37 @@ body {
   box-sizing: inherit;
 }
 
-
 .container {
-  margin: 2rem auto 0 auto;
-  max-width: 112rem;
-  padding: 0 2rem;
+  margin: 0.5rem auto 0 auto;
+  max-width: 75rem;
+  padding: 0 1rem;
   position: relative;
   width: 100%;
 }
 
-
 button {
   background-color: rgb(207,0,15);
-  border: 0.1rem solid rgb(207,0,15);
+  border: none;
   border-radius: 0.4rem;
   color: #fff;
   cursor: pointer;
   display: inline-block;
-  font-size: 1.1rem;
-  font-weight: 700;
-  height: 3.8rem;
-  letter-spacing: 0.1rem;
-  line-height: 3.8rem;
-  padding: 0 2rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 400;
+  padding: .5rem 1rem;
+  margin-bottom: .5rem;
   text-align: center;
   text-decoration: none;
-  text-transform: uppercase;
+  letter-spacing: 0.1rem;
   white-space: nowrap;
 }
-button:hover {
+button:hover, button:focus {
   background-color: #606c76;
-  border-color: #606c76;
   color: #fff;
-  outline: 0;
-}
-button:focus {
-	opacity: 0.75;
 }
 button[disabled] {
-  opacity: 0.5;
+  opacity: 0.75;
   cursor: default;
 }
 button[disabled]:hover, button[disabled]:focus {
@@ -90,7 +90,6 @@ input[type='email'],
 input[type='number'],
 input[type='password'],
 input[type='search'],
-input[type='tel'],
 input[type='text'],
 input[type='url'],
 textarea,
@@ -99,30 +98,21 @@ select {
   border: 0.1rem solid #d1d1d1;
   border-radius: 0.4rem;
   box-shadow: none;
-  height: 3.8rem;
-  padding: 0.6rem 1rem;
   width: 100%;
 }
 textarea {
-  padding-bottom: 0.6rem;
-  padding-top: 0.6rem;
-  min-height: 6.5rem;
+	min-height: 7.5rem;
 }
 textarea.large {
-	min-height: 20rem;
+/* 	min-height: 21rem; */
+}
+input[type=file] {
+	margin-bottom: 1.25rem;
 }
 
-label,
-legend {
-  font-size: 1.6rem;
-  font-weight: 700;
-  display: block;
-  margin-bottom: 0.5rem;
-}
-
-fieldset {
-  border-width: 0;
-  padding: 0;
+label {
+	font-weight: 500;
+	display: block;
 }
 
 input[type='checkbox'],
@@ -132,7 +122,7 @@ input[type='radio'] {
 
 a {
 	color: rgb(207,0,15);
-  text-decoration: none;
+	text-decoration: none;
 }
 a:hover {
   color: rgb(150,40,27);
@@ -142,17 +132,8 @@ a:hover {
 dl,
 ol,
 ul {
-  margin-top: 0;
-  padding-left: 0;
-}
-dl ul,
-dl ol,
-ol ul,
-ol ol,
-ul ul,
-ul ol {
-  font-size: 90%;
-  margin: 1.5rem 0 1.5rem 3rem;
+	margin: 0;
+	padding: 0;
 }
 
 dl {
@@ -160,7 +141,7 @@ dl {
 }
 
 ul {
-  list-style: circle inside;
+  list-style: dot inside;
 }
 
 ol {
@@ -170,55 +151,16 @@ ol {
 dt,
 dd,
 li {
-  margin-bottom: 1rem;
+	margin: 0;
+	padding: 0;
 }
-
-button {
-  margin-bottom: 1rem;
+li:last-of-type {
+	margin-bottom: 1.5rem;
 }
-
-input,
-textarea,
-select,
-fieldset {
-  margin-bottom: 1.5rem;
-}
-
-pre,
-blockquote,
-dl,
-figure,
-table,
-p,
-ul,
-ol,
-form {
-  margin-bottom: 2.5rem;
-}
-/*
-
-table {
-  width: 100%;
-}
-
-th,
-td {
-  border-bottom: 0.1rem solid #e1e1e1;
-  padding: 1.2rem 1.5rem;
-  text-align: left;
-}
-th:first-child,
-td:first-child {
-  padding-left: 0;
-}
-th:last-child,
-td:last-child {
-  padding-right: 0;
-}
-*/
 
 p {
-  margin-top: 0;
+	margin-top: 0;
+	margin-bottom: 0;
 }
 
 h1,
@@ -227,138 +169,32 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: 500;
-  margin-bottom: 2rem;
-  margin-top: 0;
+	font-weight: bold;
 }
 
 h1 {
-  font-size: 4rem;
-  line-height: 1.2;
+	font-size: 2rem;
+	line-height: 3rem;
+	margin-bottom: 1rem;
+	margin-top: .5rem;
 }
 
 h2 {
-  font-size: 3rem;
-  line-height: 1.25;
+	font-size: 1.25rem;
+	line-height: 1.75rem;
+    margin: 0rem 0 1.25rem 0;
 }
 
 h3 {
-  font-size: 2rem;
-  line-height: 1.3;
-  margin-bottom: 1rem;
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+    margin: 0 0 1.25rem 0;
 }
 
 h4 {
-  font-size: 1.8rem;
-  line-height: 1.35;
-  margin-bottom: 1rem;
-}
-
-h5 {
-  font-size: 1.5rem;
-  line-height: 1.5;
-  margin-bottom: 1rem;
-}
-
-h6 {
-  font-size: 1.25rem;
-  line-height: 1.4;
-  margin-bottom: 1rem;
-}
-
-
-
-[contenteditable=true] {
-	min-width: 10rem;
-	display: inline-block;
-	padding: 0.5rem;
-}
-[contenteditable=true]:empty:before {
-	content: attr(placeholder);
-	color: #aaa;
-}
-[contenteditable=true]:empty {
-	border: 1px dotted #bbb;
-	border-radius: 4px;
-	min-width: 10rem;
-	min-height: 3rem;
-}
-.small[contenteditable=true] {
-	min-width: 5rem;
-}
-.large[contenteditable=true] {
-	min-width: 15rem;	
-}
-.largearea[contenteditable=true] {
-	min-width: 100%;
-	min-height: 10rem;
-	border: 1px dotted #bbb;
-	border-radius: 4px;
-	margin-bottom: 2rem;
-}
-
-dl.field {
-	margin: 0;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: left;
-	flex-wrap: wrap;
-}
-dl.field div {
-	flex: 1 1 auto;
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
-	align-items: center;
-	margin: 1rem 0;
-}
-dl.field dt {
-	display: inline-block;
-	font-weight: bold;
-	margin: 0 2rem 0 0;
-	flex: 1 1 auto;
-	white-space: nowrap;
-	text-align: left;
-}
-dl.field dd {
-	display: inline-block;
-	margin: 0 2rem 0 0;
-	flex: 2 2 auto;
-	padding: 0.5rem;
-}
-
-/* Larger than phone screen */
-@media (min-width: 40.0rem) {
-	dl.field {
-		flex-direction: row;
-		margin: 0 2rem;
-		align-items: center;
-	}
-	
-	.field-row {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-	}
-	.field-row.wrap {
-		flex-wrap: wrap;
-	}
-	.field-column {
-		flex: 1 1 auto;
-		margin-right: 3rem;
-	}
-	.field-row.wrap .field-column {
-		min-width: 20%;	
-	}
-	.field-column-33 {
-		flex: 1 1 31%;
-		margin-right: 3rem;
-	}
-	.field-column-50 {
-		flex: 1 1 45%;
-		margin-right: 3rem;
-	}
+  font-size: 1rem;
+  line-height: 1.5rem;
+  margin: .25rem 0 1.25rem 0;
 }
 
 
@@ -368,15 +204,16 @@ dl.field dd {
 .page-header {
 	position: relative;
 	display: flex;
+	align-items: center;
 }
 h1 {
-	flex: 4 4 auto;
+	flex: 4 1 auto;
 }
-.btn-open-actions {
-	flex: 1 1 auto;
-	margin: 1rem;
-	padding: 0 1rem;
+.menu-open {
+	flex: 1 4 auto;
+	text-align: right;
 }
+
 /*
 	Application actions menu	
 */
@@ -396,11 +233,12 @@ h1 {
 	display: none;
 	position: absolute;
 	background-color: #fff;
-	padding: 2rem;
+	padding: 1.5rem;
 	border: 2px solid rgb(207,0,15);
 	border-radius: 4px;
 	z-index: 50;
-	max-width: 50%;
+	max-width: 100%;
+	box-shadow: 18px 20px 70px 1px rgba(0, 0, 0, 0.5);
 }
 .dropdown.open {
 	display: block;
@@ -411,9 +249,15 @@ h1 {
 .dropdown ul:empty:before {
 	content: 'No characters saved.';
 }
+.dropdown ul li {
+	margin-bottom: 1.5rem;
+}
+.dropdown ul li:last-of-type {
+	margin-bottom: 0;
+}
 
 /* Larger than phone screen */
-@media (min-width: 40.0rem) {
+@media (min-width: 50.0rem) {
 	.btn-open-actions {
 		display: none;
 	}
@@ -422,120 +266,262 @@ h1 {
 		max-height: none;
 		overflow: visible;
 	}
+	.dropdown ul li {
+		margin-bottom: 0;
+	}
 }
 
 /*
-	Alerts at the top of the page.	
+	Alerts and dialogs
 */
+/* All have this class */
 .dialog {
-	margin: 2rem auto;
-	padding: 2rem;
+	margin: 1rem auto;
+	padding: 1.5rem;
 	border: 2px solid rgb(207,0,15);
 	border-radius: 4px;
 	background-color: #fefefe;
-}
-.alert-main {
-	margin: 2rem;
-	position: fixed;
-	top: 2rem;
-	width: auto;
-	z-index: 75;
 	box-shadow: 0 0 40px 10px rgba(0, 0, 0, 0.5);
-}
-.alert-main:empty {
 	display: none;
-}
-.alert-main .close {
-	float: right;
-	margin-left: 2rem;
-}
-.dialog-backup {
-	display: none;
-}
-.dialog-backup.open {
-	display: block;
-}
-#dialog_help {
-	display: none;
-	margin: 2rem;
-	position: absolute;
-	top: 2rem;
 	width: auto;
 	z-index: 100;
-	box-shadow: 0 0 40px 10px rgba(0, 0, 0, 0.5);
+	position: fixed;
+	left: 50%;
+	transform: translateX(-50%);
+	min-width: 80%;
 }
-#dialog_help.open {
+.dialog.open {
 	display: block;
 }
-.alert-unsaved.dialog {
-    position: fixed;
+/* Close button */
+.dialog button.close {
+	float: right;
+	margin: 1rem 0 0 1rem;
+}
+/* Alert for various things */
+.alert-main {
+	top: 2rem;
+}
+/* Help info */
+#dialog_help {
+	position: absolute;
+	top: 2rem;
+	z-index: 75;
+}
+/* unsaved changes alert */
+.alert-unsaved {
+	transform: none;
     bottom: 0;
-    right: 2rem;
+    right: 0;
+    left: initial;
     z-index: 125;
     font-weight: bold;
-    padding: 1rem 2rem;
     color: rgb(207,0,15);
-    display: none;
+    font-size: 0.75rem;
+    line-height: 1rem;
+    padding: .25rem 1rem;
+    min-width: initial;
 }
-.alert-unsaved.open {
-	display: block;
+.dialog-backup {
+	position: absolute;
 }
-@media (min-width: 40.0rem) {
-	.alert-main, #dialog_help {
+.dialog button.delete-conf {
+    float: left;
+    margin: 1rem 0 0 0;
+}
+
+@media (min-width: 50.0rem) {
+	.dialog {
 		margin: 2rem auto;
-		max-width: 112rem;
+		padding: 1.5rem 3rem;
+		min-width: 40%;
+	}
+	.alert-unsaved {
+		font-size: 1rem;
+		line-height: 1.5rem;
+		padding: 0.75rem 1.5rem;
+		right: 2rem;
+		min-width: initial;
+	}
+	.alert-main, #dialog_help {
+		max-width: 70rem;
 		left: 50%;
 		transform: translateX(-50%);
 	}
 }
+
+
+/* Fields at top of page */
+[contenteditable=true] {
+	display: inline-block;
+}
+[contenteditable=true]:empty:before {
+	content: attr(placeholder);
+	color: #aaa;
+}
+[contenteditable=true]:empty {
+	border: 1px dotted #bbb;
+	border-radius: 4px;
+}
+.field [contenteditable=true] {
+	min-width: 7rem;
+}
+.field [contenteditable=true]:empty {
+	line-height: 1.4rem;
+	min-height: 1.5rem;
+}
+.field .small[contenteditable=true] {
+	min-width: 3rem;
+}
+.large[contenteditable=true] {
+/* 	min-width: 15rem; */	
+}
+.smallarea[contenteditable=true] {
+	min-width: 100%;
+	margin-bottom: 1.5rem;
+	min-height: 4.5rem;
+}
+.largearea[contenteditable=true] {
+	min-width: 100%;
+	margin-bottom: 1.5rem;
+	min-height: 7.5rem;
+}
+
+dl.field {
+	margin: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: left;
+	flex-wrap: wrap;
+}
+dl.field div {
+	flex: 1 1 auto;
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: center;
+	margin: .5rem 0rem 1rem 0;
+}
+dl.field dt {
+	display: inline-block;
+	font-weight: 500;
+	flex: 1 1 auto;
+	text-align: left;
+}
+dl.field dd {
+	display: inline-block;
+ 	margin: 0 0 0 2rem;
+	flex: 2 1 auto;
+}
+
+dl.field dd:first-of-type {
+	margin-right: 1rem;
+}
+dl.field dd:last-of-type {
+	margin-right: 0rem;
+}
+dl.field dd span:last-of-type {
+	text-align: right;
+}
+
+/* Larger than phone screen */
+@media (min-width: 50.0rem) {
+	dl.field {
+		flex-direction: row;
+		align-items: center;
+	}
+	dl.field div  {
+		margin-right: 2rem;
+	}
+	
+	.field-row {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		flex-wrap: wrap;
+	}
+	.field-row.wrap {
+		flex-wrap: wrap;
+	}
+	.field-column {
+		flex: 1 1 auto;
+		margin-right: 2rem;
+	}
+	.field-row.wrap .field-column {
+		min-width: 20%;	
+	}
+	.field-column-33 {
+		flex: 1 0 33%;
+		padding-right: 2rem;
+	}
+	.field-column-50 {
+		flex: 1 0 50%;
+		padding-right: 2rem;
+	}
+}
+
 
 /*
 	Areas for attributes and skills	
 */
 .pc-attributes, .pc-skills {
 	list-style-type: none;
+	font-size: 1.25rem;
+	line-height: 1.75rem;
+	margin: 0;
+	padding: 0;
 }
 .pc-attributes li, .pc-skills li {
-	margin: 0;
+	margin-bottom: 1.25rem;
 	white-space: nowrap;
 }
 .pc-attributes label {
 	display: inline-block;
-	margin-right: 1rem;
-	width: auto;
+ 	margin-right: 1rem;
+ 	width: auto;
 }
 .pc-attributes label:first-of-type {
-	width: 3rem;
+ 	width: 2rem;
 }
 .pc-skills label {
 	display: inline-block;
-	margin-right: 1rem;
+ 	margin-right: 1rem;
 }
-.pc-attributes input, .pc-skills input {
+.pc-attributes input[type=number] {
 	display: inline-block;
 	margin-right: 1rem;
-	width: 6rem;
+	width: 3rem;
+	border: none;
+	padding: 0;
 }
 .pc-attributes input[type=checkbox], .pc-skills input[type=checkbox] {
 	width: auto;
-	margin-left: 1rem;
+	margin-right: 0.5rem;
+	display: inline-block;
+/* 	margin-left: 1rem; */
 }
-.pc-attributes .pc-attribute-mod {
+.pc-attribute-mod, .pc-save-mode {
 	display: inline-block;
 	margin-right: 1rem;
 	font-weight: bold;
+	min-width: 1.5rem;
+	text-align: right;
 }
 
+/*
+	Footer
+*/
 footer {
 	margin: 1rem 0;
-	padding: 1rem;
+	padding: .5rem;
 	border-top: 1px solid rgb(96, 108, 118);
 }
 
-
-@media (min-width: 40.0rem) {
+@media (min-width: 50.0rem) {
 	footer {
 		display: flex;
+		align-items: baseline;
 	}
 	footer h4 {
 		flex: 1 1 50%;
