--- a/src/styles.css
+++ b/src/styles.css
@@ -321,6 +321,7 @@ h1 {
     line-height: 1rem;
     padding: .25rem 1rem;
     min-width: initial;
+    margin-right: 1rem;
 }
 .dialog-backup {
 	position: absolute;
