list in list fixes #34

--- a/src/styles.css
+++ b/src/styles.css
@@ -143,6 +143,9 @@ dl {
 ul {
   list-style: dot inside;
 }
+ul ul, ul ol, ol ul, ol ol {
+	margin-left: 1rem;
+}
 
 ol {
   list-style: decimal inside;
