--- a/src/styles.css
+++ b/src/styles.css
@@ -14,14 +14,14 @@ body {
   font-weight: 300;
   letter-spacing: 0.01em;
   line-height: 1.5rem;
-  font-family: -apple-system, 
-    BlinkMacSystemFont, 
-    "Segoe UI", 
-    Roboto, 
-    Oxygen-Sans, 
-    Ubuntu, 
-    Cantarell, 
-    "Helvetica Neue", 
+  font-family: -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen-Sans,
+    Ubuntu,
+    Cantarell,
+    "Helvetica Neue",
     sans-serif;
 }
 
@@ -221,8 +221,8 @@ h4 {
 
 
 /*
-	Page header/name and menu toggle	
-*/			
+	Page header/name and menu toggle
+*/
 .page-header {
 	position: relative;
 	display: flex;
@@ -237,7 +237,7 @@ h1 {
 }
 
 /*
-	Application actions menu	
+	Application actions menu
 */
 .app-actions {
 	max-height: 0;
@@ -397,7 +397,7 @@ h1 {
 	min-width: 3rem;
 }
 .large[contenteditable=true] {
-/* 	min-width: 15rem; */	
+/* 	min-width: 15rem; */
 }
 .smallarea[contenteditable=true] {
 	min-width: 100%;
@@ -432,8 +432,11 @@ dl.field div {
 dl.field div.with_icon {
 	margin-top: 0;
 }
+div.with_icon [contenteditable=true]:empty {
+	border: none;
+}
 div.with_icon [contenteditable=true]:empty:before {
-	line-height: 2.5rem;	
+	line-height: 2.5rem;
 }
 dl.field dt {
 	display: inline-block;
@@ -487,6 +490,11 @@ span[data-name=hp_cur] {
     line-height: 2.5rem;
 }
 
+input[type='number'].small {
+    display: inline-block;
+    width: 3rem;
+}
+
 /* Larger than phone screen */
 @media (min-width: 50.0rem), print {
 	dl.field {
@@ -496,7 +504,7 @@ span[data-name=hp_cur] {
 	dl.field div  {
 		margin-right: 2rem;
 	}
-	
+
 	.field-row {
 		display: flex;
 		flex-direction: row;
@@ -511,7 +519,7 @@ span[data-name=hp_cur] {
 		margin-right: 2rem;
 	}
 	.field-row.wrap .field-column {
-		min-width: 20%;	
+		min-width: 20%;
 	}
 	.field-column-33 {
 		flex: 1 0 33%;
@@ -525,7 +533,7 @@ span[data-name=hp_cur] {
 
 
 /*
-	Areas for attributes and skills	
+	Areas for attributes and skills
 */
 .pc-attributes, .pc-skills {
 	list-style-type: none;
@@ -554,7 +562,7 @@ span[data-name=hp_cur] {
 	display: inline-block;
 	margin-right: 1rem;
 	width: 3rem;
-	border: none;
+	border: 1px dotted #bbb;
 	padding: 0;
 }
 .pc-attributes input[type=checkbox], .pc-skills input[type=checkbox] {
@@ -641,9 +649,9 @@ nav ol li:last-of-type a {
 	nav a {
 		margin: .5rem 0;
 		font-size: 1.25rem;
-		line-height: 1.75rem;	
-	}	
-	
+		line-height: 1.75rem;
+	}
+
 }
 
 
@@ -668,7 +676,7 @@ nav ol li:last-of-type a {
 /*      page-break-after: avoid; */
    }
    dl.field div {
-	   margin: 0 0 0.5rem 0;   
+	   margin: 0 0 0.5rem 0;
    }
    .pc-attributes, .pc-skills {
 	   font-size: inherit;
