--- a/src/styles.css
+++ b/src/styles.css
@@ -219,6 +219,15 @@ h4 {
   margin: .25rem 0 1.25rem 0;
 }
 
+table {
+    border-collapse: collapse;
+    text-align: left;
+    border: none;
+}
+th, td {
+    padding: .5rem 1.5rem .5rem .5rem;
+}
+
 
 /*
     Page header/name and menu toggle
