--- a/src/styles.css
+++ b/src/styles.css
@@ -464,7 +464,8 @@ span[data-name=hd_max] {
     text-align: right;
 }
 
-dd[data-name=armor_class] {
+dd[data-name=armor_class],
+dd[data-name=cpn_armor_class] {
     background-image: url(/images/shield.svg);
     background-repeat: no-repeat;
     height: 3rem;
@@ -473,7 +474,8 @@ dd[data-name=armor_class] {
     background-position: center;
     line-height: 2.5rem;
 }
-span[data-name=hp_max] {
+span[data-name=hp_max],
+span[data-name=cpn_hp_max] {
     background-image: url(/images/heart.svg);
     background-repeat: no-repeat;
     height: 3rem;
@@ -483,7 +485,8 @@ span[data-name=hp_max] {
     background-position: center;
     line-height: 2.5rem;
 }
-span[data-name=hp_cur] {
+span[data-name=hp_cur],
+span[data-name=cpn_hp_cur] {
     background-image: url(/images/heart_broken.svg);
     background-repeat: no-repeat;
     height: 3rem;
