--- a/src/styles.css
+++ b/src/styles.css
@@ -227,6 +227,14 @@ table {
 th, td {
     padding: .5rem 1.5rem .5rem .5rem;
 }
+table.table-editable {
+    width: 100%;
+    margin-bottom: 1.5rem;
+}
+table.table-editable tbody tr {
+    border-bottom: 1px solid rgb(207,0,15);
+    margin-bottom: .25rem;
+}
 
 
 /*
@@ -501,6 +509,12 @@ input[type='number'].small {
     width: 3rem;
 }
 
+td[contenteditable=true] {
+    display: table-cell;
+    padding: .25rem;
+    margin-bottom: .25rem;
+}
+
 /* Larger than phone screen */
 @media (min-width: 50.0rem), print {
     dl.field {
@@ -519,6 +533,9 @@ input[type='number'].small {
     }
     .grid .fullwidth {
         grid-column: span 3;
+    }
+    .grid .grid-span-col-2 {
+        grid-column: span 2;
     }
 }
 
