fix(css): Fix margin on lists
Closes #61

--- a/src/styles.css
+++ b/src/styles.css
@@ -586,6 +586,9 @@ td[contenteditable=true] {
     text-align: right;
 }
 
+ul.list-vertical {
+    margin-bottom: 1rem;
+}
 ul.list-vertical li {
     display: block;
     margin-bottom: 0.125rem;
