--- a/src/styles.css
+++ b/src/styles.css
@@ -86,6 +86,12 @@ button.btn-plain:hover, button.btn-plain:focus {
     text-decoration: underline;
     opacity: inherit;
 }
+/** Slightly smaller button */
+button.btn-sm {
+    font-size: 0.8rem;
+    padding: .25rem .75rem;
+    margin: 0;
+}
 
 fieldset {
     border: 1px solid rgb(221, 221, 221);
