--- a/src/styles.css
+++ b/src/styles.css
@@ -40,7 +40,7 @@ body {
   overflow: hidden;
 }
 
-button {
+button, .btn {
   background-color: rgb(207,0,15);
   border: none;
   border-radius: 0.4rem;
@@ -57,9 +57,12 @@ button {
   letter-spacing: 0.1rem;
   white-space: nowrap;
 }
-button:hover, button:focus {
+button:hover, button:focus, .btn:hover, .btn:focus {
   background-color: #606c76;
   color: #fff;
+}
+button[slot="confirm"], .btn[data-triggered="true"] {
+    background-color: blue;
 }
 button[disabled] {
   opacity: 0.75;
@@ -69,7 +72,7 @@ button[disabled]:hover, button[disabled]:focus {
     opacity: 0.5;
 }
 /* Button that looks like link */
-button.btn-plain {
+button.btn-plain, confirm-button.btn-plain {
     background-color: rgba(0, 0, 0, 0);
     color: rgb(207,0,15);
     border: none;
@@ -81,13 +84,14 @@ button.btn-plain {
     margin: 0;
     height: auto;
 }
-button.btn-plain:hover, button.btn-plain:focus {
+button.btn-plain:hover, button.btn-plain:focus, confirm-button.btn-plain:hover, confirm-button.btn-plain:focus {
     color: rgb(150,40,27);
     text-decoration: underline;
     opacity: inherit;
+    background-color: inherit;
 }
 /** Slightly smaller button */
-button.btn-sm {
+button.btn-sm, confirm-button.btn-sm {
     font-size: 0.8rem;
     padding: .25rem .75rem;
     margin: 0;
